--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
@@ -33,8 +33,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/tasks/definitions" Match="NavLinkMatch.All">
-                <span class="bi bi-file-code" aria-hidden="true"></span> Task Definitions
+            <NavLink class="nav-link" href="/tasks/templates" Match="NavLinkMatch.All">
+                <span class="bi bi-file-code" aria-hidden="true"></span> Task Templates
             </NavLink>
         </div>
     </nav>
