fix(Dashboard): fixed left menu rendering

--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/Layout.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/Layout.razor
@@ -26,8 +26,8 @@
         <Breadcrumb />
 
         <div class="w-100 flex-grow flex-lg-row flex-column d-flex">
-            <LeftMenu />
-            <div class="content flex-grow">
+            <LeftMenuRenderer />
+            <div class="content flex-grow-1">
                 @Body
             </div>
         </div>
