--- a/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
@@ -7434,6 +7434,11 @@
   content: "\f83e";
 }
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 html, body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: relative;
