--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Pages/HumanTaskTemplates/List/View.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Pages/HumanTaskTemplates/List/View.razor
@@ -26,7 +26,7 @@
 </Header>
 
 <LeftMenu>
-    <button class="btn btn-outline-dark">Create new human task template</button>
+    <button class="btn btn-outline-dark">Create new template</button>
 </LeftMenu>
 
 <div class="row">
