--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/HeaderRenderer.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/HeaderRenderer.razor
@@ -1,12 +1,12 @@
-﻿@*
-    Copyright © 2022-Present The Open Human Task Specification Authors. All rights reserved.
-
+﻿@* 
+    Copyright © 2022-Present The Synapse Authors
+    <p>
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-
+    <p>
     http://www.apache.org/licenses/LICENSE-2.0
-
+    <p>
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,30 +14,27 @@
     limitations under the License.
 *@
 
-@using System.ComponentModel
 @namespace OpenHumanTask.Runtime.Dashboard.Components
-
-@inject ILayoutManager Layout;
 @implements IDisposable
+@inject ILayoutManager Layout
 
-@if (Layout.LeftMenu != null)
-{
-    <div class="left-sidebar p-3">
-        @Layout.LeftMenu?.ChildContent
+<div class="header px-4">
+    <div class="w-100 d-flex align-items-center justify-content-between">
+        @Layout.Header?.ChildContent
     </div>
-}
+</div>
 
 @code
 {
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        this.Layout.PropertyChanged += OnLayoutChanged;
+        this.Layout.PropertyChanged += OnLayoutHeaderChanged;
     }
 
-    private void OnLayoutChanged(object? sender, PropertyChangedEventArgs e)
+    private void OnLayoutHeaderChanged(object? sender, PropertyChangedEventArgs e)
     {
-        if (e.PropertyName == nameof(ILayoutManager.LeftMenu))
+        if (e.PropertyName == nameof(ILayoutManager.Header))
         {
             this.StateHasChanged();
         }
@@ -46,7 +43,8 @@
     public void Dispose()
     {
         if (this.Layout != null)
-            this.Layout.PropertyChanged -= this.OnLayoutChanged;
+            this.Layout.PropertyChanged -= OnLayoutHeaderChanged;
         GC.SuppressFinalize(this);
     }
+
 }
