--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
@@ -15,38 +15,74 @@
 *@
 
 @namespace OpenHumanTask.Runtime.Dashboard.Components
+@using IdentityModel
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
+@inject SignOutSessionStateManager SignOutManager
 
-<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Open Human Task</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="header navbar navbar-expand-lg flex-row navbar-dark bg-dark">
+    <div class="navbar-collapse @NavMenuCssClass">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <small class="bi bi-house" aria-hidden="true"></small><span class="btn-label">Home</span>
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="tasks/templates" Match="NavLinkMatch.Prefix">
+                    <small class="bi bi-file-code" aria-hidden="true"></small><span class="btn-label">Task Templates</span>
+                </NavLink>
+            </li>
+        </ul>
+        @if (authenticationState != null)
+        {
+            <div class="dropdown ms-auto">
+                <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown">
+                    @(authenticationState.User.HasClaim(c => c.Type == JwtClaimTypes.PreferredUserName) ? authenticationState.User.FindFirst(JwtClaimTypes.PreferredUserName)!.Value : authenticationState.User.Identity!.Name)
+                </button>
+                <ul class="dropdown-menu">
+                    @*<li><a class="dropdown-item">Profile</a></li>
+                <li><hr class="dropdown-divider"></li>*@
+                    <li><a @onclick="LogoutAsync" class="dropdown-item d-inline">Logout</a></li>
+                </ul>
+            </div>
+        }
     </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/tasks/templates" Match="NavLinkMatch.All">
-                <span class="bi bi-file-code" aria-hidden="true"></span> Task Templates
-            </NavLink>
-        </div>
-    </nav>
-</div>
+    <button class="navbar-toggler" @onclick="ToggleNavMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
 
 @code {
     private bool collapseNavMenu = true;
-
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private AuthenticationState? authenticationState;
+
+    [CascadingParameter]
+    private Task<AuthenticationState> GetAuthenticationStateAsync { get; set; } = null!;
+
+    protected override async Task OnInitializedAsync()
+    {
+        this.authenticationState = await this.GetAuthenticationStateAsync;
+        this.AuthenticationStateProvider.AuthenticationStateChanged += async _ =>
+        {
+            this.authenticationState = await this.GetAuthenticationStateAsync;
+            this.StateHasChanged();
+        };
+        await base.OnInitializedAsync();
+    }
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        this.collapseNavMenu = !this.collapseNavMenu;
     }
+
+    private async Task LogoutAsync(MouseEventArgs args)
+    {
+        await this.SignOutManager.SetSignOutState();
+        this.NavigationManager.NavigateTo("authentication/logout");
+    }
+
 }
