--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor.css
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor.css
@@ -1,62 +1,52 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+﻿.header {
+  padding: 0 !important;
+  flex-direction: column;
+}
+.header .navbar-brand {
+  background-color: rgba(var(--bs-black-rgb), 0.4);
+  height: 3rem;
+  margin-right: 0 !important;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.header .navbar-brand .logo-container {
+  margin: auto;
+  width: 200px;
+}
+.header .white {
+  fill: var(--bs-white);
+  stroke: var(--bs-white);
+}
+.header .logo {
+  height: 100%;
+}
+.header .logotype {
+  height: 66.6%;
+}
+.header .nav-item ::deep a {
+  color: var(--bs-gray-100);
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  line-height: 3rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-weight: 600;
+}
+.header .nav-item ::deep a.active {
+  background-color: var(--bs-white);
+  color: var(--bs-black);
+}
+.header .nav-item ::deep a:hover {
+  background-color: rgba(var(--bs-white-rgb), 0.1);
+  color: white;
+}
+.header .bi {
+  margin-right: 0.5rem;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.navbar-brand {
-    font-size: 1.1rem;
-}
-
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item ::deep a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+@media (min-width: 992px) {
+  .header {
+    flex-direction: row;
+  }
 }
