--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Pages/Index.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Pages/Index.razor
@@ -15,7 +15,18 @@
 *@
 
 @page "/"
+@inject IBreadcrumbManager BreadcrumbManager
 
 <PageTitle>Home</PageTitle>
 
 <p>Welcome to the official runtime of the Open Human Task specification</p>
+
+@code{
+
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+        this.BreadcrumbManager.Use(Breadcrumbs.Home);
+    }
+
+}
