--- a/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/Components/Shared/Layout/MainMenu.razor
@@ -23,6 +23,9 @@
 @inject SignOutSessionStateManager SignOutManager
 
 <nav class="header navbar navbar-expand-lg flex-row navbar-dark bg-dark">
+    <a class="navbar-brand d-flex flex-row align-items-center justify-content-center" href="https://github.com/openhumantask/runtime">
+        <img src="/img/logo_white.svg" height="35" />
+    </a>
     <div class="navbar-collapse @NavMenuCssClass">
         <ul class="navbar-nav">
             <li class="nav-item">
