--- a/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
@@ -7513,3 +7513,12 @@ a, .btn-link {
 .blazor-error-boundary::after {
   content: "An error has occurred.";
 }
+
+ul.dropdown-menu {
+  width: 100%;
+}
+
+ul.dropdown-menu li {
+  cursor: pointer;
+  user-select: none;
+}
