--- a/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
+++ b/src/apps/OpenHumanTask.Runtime.Dashboard/wwwroot/css/app.css
@@ -7455,6 +7455,36 @@ body {
   height: 100%;
 }
 
+.full-splash {
+  background: var(--bs-primary) !important;
+}
+
+#logo-container svg {
+  fill: white;
+  stroke: white;
+  max-width: 200px;
+}
+
+.spinner-border {
+  margin-top: 3rem;
+  color: white;
+}
+
+#logo-container, #animation-container {
+  width: 100%;
+  height: 100%;
+  background-color: var(--bs-white);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 h1:focus {
   outline: none;
 }
